Tue Mar 06 18:39:05 2001  George Lebl <jirka@5z.com>

	* panel-util.c: support KDE documentation for the launcher and
	  menu help thingies. So we can read KDE's DocPath thingies.

Tue Mar 06 16:20:26 2001  George Lebl <jirka@5z.com>

	* launcher.[ch], menu.c, applet.c, gnome-panel-properties.desktop,
	  panel-utils.c:  Understand the DocPath field.  Now we can start
	  using it in other .desktops.  Still doesn't understand the kde
	  paths, though that should not be hard if we can guess the KDE
	  documentation path.

Tue Mar 06 11:08:45 2001  George Lebl <jirka@5z.com>

	* basep-widget.c: don't show the panel if hidebuttons are disabled
	  for the drawers case.  I suppose this is not the best fix and it
	  should be in the respecitve panels. Fixes #21963

Sun Mar 04 22:43:22 2001  George Lebl <jirka@5z.com>

	* gnome-run.c: find and set envariomental variables for exec
	  shell style.  Fix a small leak, enable command completion on
	  Ctrl-Tab, if it were on tab it would make keyboard navigation
	  impossible.

Sun Mar 04 14:19:15 2001  George Lebl <jirka@5z.com>

	* global-keys.c: clean up the modifiers patch to actually compile
	  and be more in the panel style of coding.

2001-03-02  Valek Filippov  <frob@df.ru>

	* panel/global-keys.c: patch from Vlad Harchev <hvv@hippo.ru> for
	  popup menu and "run" dialog independancy from the state of Scroll/Numlock.

Thu Mar 01 03:29:01 2001  George Lebl <jirka@5z.com>

	* icon-entry-hack.[ch], menu.c, drawer.c, panel-util.c,
	  menu-properties.c, launcher.c:  Fix icon selection bugs.  One
	  icon doesn't change when just selected,  second notice the change
	  when the first time an icon is set from no icon.

Tue Feb 27 20:57:52 2001  George Lebl <jirka@5z.com>

	* basep-widget.c, drawer-widget.c: remove some dead code.

Tue Feb 27 20:56:32 2001  George Lebl <jirka@5z.com>

	* gnome-run.c: a bit of cleanup and set the file selection box
	  as a transient of the runbox.

2001-02-25  jacob berkman  <jacob@ximian.com>
