@@ -1,3 +1,8 @@
+Tue Mar 06 18:56:43 2001  George Lebl <jirka@5z.com>
+
+	* launcher.c: correctly translate "%c" and %c in the kde command line
+	  perhaps this code should be smarter
+
 Tue Mar 06 18:39:05 2001  George Lebl <jirka@5z.com>
 
 	* panel-util.c: support KDE documentation for the launcher and
